--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
               <% else %>
                 <%= link_to raw('se connecter'), "/users/sign_in" %> | <%= link_to raw("s'inscrire"), "/users/sign_up" %>
               <% end%>
+              | <%= link_to 'classement', '/classement' %>
           </td>
         </tr>
       </table>
